Gerer l'authentification et l'usage du scope
